# nexy

./: .gitignore  .nexy-cache.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.pypi.md  SECURITY.md  SUPPORT.md  cliff.toml  docs_audit_specs.md  nexyconfig.py  package.json  pnpm-lock.yaml  pyproject.toml  reproduce_aside.py.bak  test_superfences.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_documentation.yml  config.yml
.github/workflows/: ci.yml
_docs/: language.md
_docs/ar/: introduction.md
_docs/en/: introduction.md
_docs/fr/: introduction.md
_docs/hi/: introduction.md
_docs/zh/: introduction.md
docs/: .gitignore  .nexy-cache.json  AGENT_GUIDE.md  README.md  nexyconfig.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
docs/src/: globale.css  manifest.json  mdxconfig  search_index.json  server.py
nexy/: __init__.py  __version__.py  _import.py  app.py  audio.py  decorators.py  errors.py  hooks.py  i18n.py  link.py  py.typed  router.py  template.py  vite.py
nexy/builder/: __init__.py  cache.py  discovery.py
nexy/cli/: __init__.py  __main__.py
nexy/compiler/: __init__.py
nexy/core/: config.py  models.py  string.py
nexy/frontend/: __init__.py  base.py  preact.py  react.py  vue.py  (+3 more)
scripts/: generate_api_reference.py  generate_docs_manifest.py  generate_search_index.py  sync_docs.py
skills/: docs.md  framework-dev.md  kiss.md  solid.md  tdd.md  vscode-extension.md
src/: actions.py
tasks/: README.md
(+414 files in other folders)
