[project]
name = "nexy"
version = "2.0.2"
description = "The Modern Fullstack Python Meta-Framework: Build high-performance web apps ."
readme = "README.pypi.md"
requires-python = ">=3.12"
keywords = [
    "python", "fastapi", "fullstack", "meta-framework", "vite", "react", "vue", "svelte", "solid", "jinja2", 
    "ssr", "web-development", "nextjs-alternative", "astro-alternative", "modern-web", "dx", 
    "frontend-agnostic", "python-ssr", "vite-python", "web-framework"
]

dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.1",
    "questionary>=2.1.1",
    "scalar-fastapi>=1.8.2",
    "typer>=0.21.1",
    "uvicorn[standard]>=0.40.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "types-jinja2>=2.11.9",
]

[project.scripts]
nx = "nexy.cli:CLI"
nexy = "nexy.cli:CLI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/nexy",
]

[tool.hatch.build.targets.wheel]
packages = ["nexy"]

[tool.mypy]
strict = true
files = "nexy"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = []
